# CSCalculator

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  kill clients and servers.bat  main.cpp  run clients.bat
Client/: CMakeLists.txt
Client/sources/: main.cpp
Project/: CMakeLists.txt
Project/Client/: CMakeLists.txt
Project/Client/Src/: main_client.cpp
Project/Server/: CMakeLists.txt
Project/Server/Src/: main_server.cpp
Server/: CMakeLists.txt  server_main.cpp
Server/Sources/: client_instance.cpp  client_instance.h  console_output.cpp  console_output.h  main.cpp  server_instance.cpp  server_instance.h  server_main.cpp  server_main.h  thread_safe_queue.cpp  thread_safe_queue.h
